add version number in theme

--- a/wp-content/themes/smart-mag-2.6.1/style.css
+++ b/wp-content/themes/smart-mag-2.6.1/style.css
@@ -1,5 +1,5 @@
 /*
-Theme Name: SmartMag
+Theme Name: SmartMag 2.6.1
 Theme URI: http://theme-sphere.com
 Version: 2.6.1
 Description: Designed by <a href="http://theme-sphere.com">ThemeSphere</a>
